[gd_scene load_steps=2 format=2]

[ext_resource path="res://exercicio3.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button4" type="Button" parent="."]
margin_left = 534.0
margin_top = 17.0
margin_right = 700.0
margin_bottom = 67.0
text = "Exercício 4"

[node name="Button3" type="Button" parent="."]
margin_left = 360.0
margin_top = 17.0
margin_right = 526.0
margin_bottom = 67.0
text = "Exercício 3"

[node name="Button2" type="Button" parent="."]
margin_left = 185.0
margin_top = 17.0
margin_right = 351.0
margin_bottom = 67.0
text = "Exercício 2"

[node name="Button1" type="Button" parent="."]
margin_left = 10.0
margin_top = 16.0
margin_right = 176.0
margin_bottom = 66.0
text = "Exercício 1"

[node name="Label" type="Label" parent="."]
margin_left = 13.0
margin_top = 85.0
margin_right = 709.0
margin_bottom = 121.0
text = "Você está no Exercício 3: Crie uma função que retorne um texto na tela"

[node name="LabelRes" type="Label" parent="."]
margin_left = 43.0
margin_top = 319.0
margin_right = 498.0
margin_bottom = 476.0
rect_scale = Vector2( 2, 2 )

[node name="Button" type="Button" parent="."]
margin_left = 385.0
margin_top = 213.0
margin_right = 682.0
margin_bottom = 306.0
text = "CLIQUE PARA RETORNAR UM TEXTO NA TELA"

[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
